--- a/css/styles.css
+++ b/css/styles.css
@@ -10147,6 +10147,6 @@ header.masthead h1 {
   display: flex;
   justify-content: center;
 }
-#projects {
+/* #projects {
   background-image: src=image(/Users/jlg/Sei/training/portfolio/assets/img/bg-masthead.jpg);
-}
+} */
