--- a/css/styles.css
+++ b/css/styles.css
@@ -10147,6 +10147,35 @@ header.masthead h1 {
   display: flex;
   justify-content: center;
 }
+
+.projects-section {
+  padding: 10rem 0;
+  background-image: src=image(/Users/jlg/Sei/training/portfolio/assets/img/bg-masthead.jpg);
+}
+.projects-section .featured-text {
+  padding: 2rem;
+}
+@media (min-width: 992px) {
+  .projects-section .featured-text {
+    padding: 0 0 0 2rem;
+    border-left: 0.5rem solid #64a19d;
+  }
+}
+.projects-section .project-text {
+  padding: 3rem;
+  font-size: 90%;
+}
+@media (min-width: 992px) {
+  .projects-section .project-text {
+    padding: 5rem;
+  }
+  .projects-section .project-text hr {
+    border-color: #64a19d;
+    border-width: 0.25rem;
+    width: 30%;
+  }
+}
+
 /* #projects {
   background-image: src=image(/Users/jlg/Sei/training/portfolio/assets/img/bg-masthead.jpg);
 } */
