--- a/css/styles.css
+++ b/css/styles.css
@@ -6133,7 +6133,7 @@ button.bg-danger:focus {
 }
 
 .bg-light {
-  background-color: #f8f9fa !important;
+  background-color: #f4623a !important;
 }
 
 a.bg-light:hover, a.bg-light:focus,
